<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/itinerary_list"
        android:layout_width="428dp"
        android:layout_height="46dp"
        android:fadeScrollbars="false"
        app:layout_constraintBottom_toTopOf="@+id/trail_dropdown"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769" />

    <Button
        android:id="@+id/itinerary_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/trail_dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="32dp"
        android:entries="@array/different_trails"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <CalendarView
        android:id="@+id/itinerary_calendar"
        android:layout_width="344dp"
        android:layout_height="316dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trail_dropdown" />

    <Spinner
        android:id="@+id/hour_dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/hours"
        app:layout_constraintTop_toBottomOf="@id/itinerary_calendar"
        app:layout_constraintRight_toLeftOf="@id/minute_dropdown"/>

    <Spinner
        android:id="@+id/minute_dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/minutes"
        app:layout_constraintTop_toBottomOf="@id/itinerary_calendar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Spinner
        android:id="@+id/am_pm_dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/am_pm"
        app:layout_constraintTop_toBottomOf="@id/itinerary_calendar"
        app:layout_constraintLeft_toRightOf="@id/minute_dropdown"/>

</androidx.constraintlayout.widget.ConstraintLayout>